Add a patch for gcc 5.x and ncurses.
Thanks to https://trac.sagemath.org/ticket/18301

--- a/configs/wifisd_defconfig
+++ b/configs/wifisd_defconfig
@@ -28,3 +28,4 @@ BR2_PACKAGE_DTACH=y
 BR2_TARGET_ROOTFS_CPIO=y
 BR2_TARGET_ROOTFS_CPIO_GZIP=y
 BR2_TARGET_ROOTFS_TAR_GZIP=y
+BR2_GLOBAL_PATCH_DIR=../kcard-buildroot/patches
